--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <img src="img2.jpg" alt="Foto de nuestro primer viaje" class="memory-image">
                     <div class="memory-text">
                         <h3>Aventura y Locura</h3>
-                        <p>“Estar contigo es un viaje infinito, lleno de experiencias que iluminan el alma. Es ser testigo de tu belleza en todas sus formas, la de tus gestos, la de tu sonrisa, la de tu manera sincera de ser. Es descubrir, día tras día, la ternura de tu personalidad y la forma en que me entregas tu cariño. Contigo, cada detalle se vuelve especial, y la manera en que me miras, me hablas y me cuidas me hace sentir amado más allá de cualquier límite.</p>
+                        <p>Estar contigo es un viaje infinito, lleno de experiencias que iluminan el alma. Es ser testigo de tu belleza en todas sus formas, la de tus gestos, la de tu sonrisa, la de tu manera sincera de ser. Es descubrir, día tras día, la ternura de tu personalidad y la forma en que me entregas tu cariño. Contigo, cada detalle se vuelve especial, y la manera en que me miras, me hablas y me cuidas me hace sentir amado más allá de cualquier límite.</p>
                     </div>
                 </div>
             </section>
@@ -114,7 +114,7 @@
                     <img src="img3.jpg" alt="Una foto de noche o en un lugar romántico" class="memory-image">
                     <div class="memory-text">
                         <h3>Contigo, Todo es Mejor</h3>
-                        <p>“Algo que siempre me enamora de ti son tus ocurrencias, esa forma tan espontánea y única de ver la vida. Tienes una alegría que se siente auténtica, que ilumina cualquier espacio y contagia hasta en los días más grises. Tu risa, tus comentarios inesperados, tu manera ligera de transformar cualquier momento en algo divertido… todo eso habla de la luz que llevas dentro.</p>
+                        <p>Algo que siempre me enamora de ti son tus ocurrencias, esa forma tan espontánea y única de ver la vida. Tienes una alegría que se siente auténtica, que ilumina cualquier espacio y contagia hasta en los días más grises. Tu risa, tus comentarios inesperados, tu manera ligera de transformar cualquier momento en algo divertido… todo eso habla de la luz que llevas dentro.</p>
                     </div>
                 </div>
             </section>
@@ -198,4 +198,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
